# apex-bs

./: CMakeLists.txt  Justfile  README.md  main.c
.github/workflows/: cmake-single-platform.yml  release.yaml
c/: CMakeLists.txt  main.c
c/include/: uuid.c  uuid.h
c/lib/: account.h  accounts.c  bank.c  bank.h  utils.c  utils.h
clang/: main.c
golang/: go.mod  go.sum  main.go  store.sqlite
golang/cmd/: bankingSystem.go  cli.go  closeAccount.go  createAccount.go  depositFunds.go  root.go  transferFunds.go  withdrawFunds.go
golang/config/: database.go
golang/models/: accounts.go  transactions.go
golang/pkg/accounts/: account.go  account_test.go
golang/pkg/bank/: bank.go  bank_test.go
golang/pkg/lib/: bankOperations.go  prompts.go  stringPrompt.go
golang/repositories/: accounts.go
include/: nuklear.h  raylib.h  uuidv4.c
include/libraygui/: icon.h  raygui.h  style.h
javascript/: index.js
js/: account.js  bank.js  bank.test.js  bankOperation.js  bankOperation.test.js  bankRunner.js  currency.js  db.js  index.js  lib.js  lib.test.js  package.json  transactions.js
lib/: account.h  accounts.c  bank.c  bank.h  constants.h  utils.c  utils.h
